--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,15 @@
     "start": "concurrently yarn:start:*"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.0",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.17"
   }
 }
