--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "concurrently": "^8.2.0",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
