--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,20 @@ dist
 build
 .DS_Store
 db.json
+
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
