--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ dist
 build
 .DS_Store
 db.json
+dist-ssr
 
 # dependencies
 /.pnp
@@ -21,3 +22,23 @@ db.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
